<resources>
    <string name="app_name" translatable="false">Messenger</string>
    <string name="action_settings">Settings</string>

    <!-- Strings used by login/register fragment    -->
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="application_logo_description">Application logo</string>
    <string name="loading">Loading</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="invalid_username">Username is invalid! (Too short)</string>
    <string name="invalid_email">Email is invalid!</string>
    <string name="invalid_password">Password is invalid! (Too short or it does not contain 1–9 A-z)</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="username_place_holder">Username of the person who sent the request</string>
    <string name="friend_username_place_holder">Friend username</string>
    <string name="search">Search</string>
    <string name="friend_username">Friend Username</string>
    <string name="add">Add</string>
    <string name="logout">Logout</string>
    <string name="chat">Chat</string>
    <string name="delete">Delete</string>
    <string name="message">Message</string>
    <string name="back">Back</string>
    <string name="send">Send</string>
    <string name="share_a_friend_name">Share a friend name</string>
    <string name="google_log_in">Google Log In</string>
</resources>