<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/friendListAdapterUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginEnd="10dp"
        android:text="@string/friend_username_place_holder" />

    <Button
        android:id="@+id/friendListAdapterChat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="50dp"
        android:layout_weight="1"
        android:layout_marginEnd="20dp"
        android:text="@string/chat" />

    <Button
        android:id="@+id/friendListAdapterDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginEnd="20dp"
        android:text="@string/delete" />

    <ImageButton
        android:id="@+id/friendListAdapterShare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="50dp"
        android:minHeight="50dp"
        android:layout_weight="1"
        android:contentDescription="@string/share_a_friend_name"
        android:background="@null"
        android:src="@drawable/baseline_send_24" />

</LinearLayout>