<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.MessageRoomFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/fragmentMessageRoomMessageArea"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="60dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxHeight="60dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">


        <ImageButton
            android:id="@+id/fragmentMessageRoomBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:background="@null"
            android:contentDescription="@string/back"
            android:minWidth="50dp"
            android:minHeight="50dp"
            android:src="@drawable/baseline_arrow_back_ios_24" />

        <EditText
            android:id="@+id/fragmentMessageRoomInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:ems="10"
            android:hint="@string/message"
            android:importantForAutofill="no"
            android:inputType="textPersonName"

            android:minHeight="50dp" />

        <ImageButton
            android:id="@+id/fragmentMessageRoomSend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:background="@null"
            android:contentDescription="@string/send"
            android:minWidth="50dp"
            android:minHeight="50dp"
            android:src="@drawable/baseline_send_24" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>